--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 [Ll]ogs/
 [Mm]emoryCaptures/
 UserSettings/
+.lingma
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
